--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,6 @@ h2 {
     color: #0D0D0D;
 }
 
-div {
-    height: auto;
-    min-height: 125px;
-    padding: 20px;
-    border: 3px solid #ffffff;
-}
-
 p {
     font-size: 24px;
     padding-top: 10px;
@@ -43,16 +36,16 @@ img {
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-top: 2px;
-    border-right: 5px;
+    border-top: 2px solid #ffffff;
+    border-right: 5px solid #ffffff;
 }
 
 .blue {
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-top: 2px;
-    border-right: 5px;
+    border-top: 2px solid #ffffff;
+    border-right: 5px solid #ffffff;
     color: #c4c4c4;
 }
 .blue h2 {
@@ -63,8 +56,8 @@ img {
     background-color: #fff000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5px;
+    border-bottom: 2px solid #ffffff;
+    border-left: 5px solid #ffffff;
     color: #707070;
 }
 .yellow h2 {
@@ -75,8 +68,15 @@ img {
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-top: 2px;
-    border-right: 5px;
+    border-top: 2px solid #ffffff;
+    border-right: 5px solid #ffffff;
+}
+
+div {
+    height: auto;
+    min-height: 125px;
+    padding: 20px;
+    border: 3px solid #ffffff;
 }
 
 footer {
