--- a/css/style.css
+++ b/css/style.css
@@ -39,30 +39,36 @@ img {
     border: 10px dashed #ffffff;
 }
 
-.red div {
+.red {
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-top: 2px solid #ffffff;
-    border-right: 5px solid #ffffff;
+    border-top: none;
+    border-right: none;
+    border-bottom: 2px solid #ffffff;
+    border-left: 5px solid #ffffff;
 }
 
-.blue div {
+.blue {
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
     border-top: 2px solid #ffffff;
     border-right: 5px solid #ffffff;
+    border-bottom: none;
+    border-left: none;
     color: #c4c4c4;
 }
 .blue h2 {
     color: #c4c4c4;
 }
 
-.yellow div {
+.yellow {
     background-color: #fff000;
     text-align: right;
     margin-left: 50px;
+    border-top: none;
+    border-right: none;
     border-bottom: 2px solid #ffffff;
     border-left: 5px solid #ffffff;
     color: #707070;
@@ -71,12 +77,14 @@ img {
     color: #707070;
 }
 
-.green div {
+.green {
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
     border-top: 2px solid #ffffff;
     border-right: 5px solid #ffffff;
+    border-bottom: none;
+    border-left: none;
 }
 
 footer {
