--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,7 @@ img {
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-top: none;
-    border-right: none;
+    border: none;
     border-bottom: 2px solid #ffffff;
     border-left: 5px solid #ffffff;
 }
@@ -53,10 +52,9 @@ img {
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
+    border: none;
     border-top: 2px solid #ffffff;
     border-right: 5px solid #ffffff;
-    border-bottom: none;
-    border-left: none;
     color: #c4c4c4;
 }
 .blue h2 {
@@ -67,8 +65,7 @@ img {
     background-color: #fff000;
     text-align: right;
     margin-left: 50px;
-    border-top: none;
-    border-right: none;
+    border: none;
     border-bottom: 2px solid #ffffff;
     border-left: 5px solid #ffffff;
     color: #707070;
@@ -78,10 +75,9 @@ img {
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
+    border: none;
     border-top: 2px solid #ffffff;
     border-right: 5px solid #ffffff;
-    border-bottom: none;
-    border-left: none;
 }
 
 footer {
@@ -91,7 +87,6 @@ footer {
 footer p{
     font-size: 20px;
     text-align: right;
-    padding-top: 15px;
-    padding-right: 15px;
-    padding-bottom: 15px;
+    padding: 15px;
+    padding-left: none;
 }
