--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ img {
 }
 
 .yellow {
-    background-color: #fff000;
+    background-color: #ffff00;
     text-align: right;
     margin-left: 50px;
     border: none;
@@ -87,6 +87,5 @@ footer {
 footer p{
     font-size: 20px;
     text-align: right;
-    padding: 15px;
-    padding-left: none;
+    padding: 15px, 15px, 15px, 0px;
 }
