--- a/css/style.css
+++ b/css/style.css
@@ -87,5 +87,6 @@ footer {
 footer p {
     font-size: 20px;
     text-align: right;
-    padding: 15px, 15px, 15px, 0px;
+    padding: 15px;
+    padding-left: initial;
 }
